[gd_scene load_steps=4 format=3 uid="uid://dyvb0uf478jwr"]

[ext_resource type="Script" path="res://Scripts/tentacle.gd" id="1_1hd8r"]

[sub_resource type="BoxMesh" id="BoxMesh_2b71e"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cskv8"]
size = Vector2(1.06818, 1)

[node name="Tentacle1" type="CharacterBody2D" groups=["Tentacle"]]
position = Vector2(6, 0)
scale = Vector2(11, 2)
script = ExtResource("1_1hd8r")

[node name="SmallTentacle" type="Node2D" parent="."]

[node name="MeshInstance2D" type="MeshInstance2D" parent="SmallTentacle"]
mesh = SubResource("BoxMesh_2b71e")

[node name="SmallCollision" type="CollisionShape2D" parent="."]
position = Vector2(0.0113636, 0)
shape = SubResource("RectangleShape2D_cskv8")

[node name="LargeTentacle" type="Node2D" parent="."]
visible = false

[node name="MeshInstance2D" type="MeshInstance2D" parent="LargeTentacle"]
position = Vector2(1.38636, 0)
scale = Vector2(3.77273, 1)
mesh = SubResource("BoxMesh_2b71e")

[node name="LargeCollision" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(1.36364, 0)
shape = SubResource("RectangleShape2D_cskv8")

[node name="MediumTentacle" type="Node2D" parent="."]
visible = false

[node name="MeshInstance2D" type="MeshInstance2D" parent="MediumTentacle"]
position = Vector2(0.295455, 0)
scale = Vector2(1.59091, 1)
mesh = SubResource("BoxMesh_2b71e")

[node name="SlapExtension" type="Timer" parent="."]
wait_time = 0.2

[connection signal="timeout" from="SlapExtension" to="." method="_on_slap_extension_timeout"]
